--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ About
 <div style="text-align: center;" >
 
 <a href="https://x.com/IZRAE_L2"> 
-<img src="images/x_logo_PNG19.png" height="70"> </a>
+<img src="x_logo_PNG19.png" height="70"> </a>
 
 <a href="https://t.me/IZRAE_L"> 
 <img src="images/2048px-Telegram_logo.svg.png" height="70"> </a>
