--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ About
 
 
 <p style="text-align: center; ">
- A crypto Enthuatiscs With a proven track record in helping
+ A crypto Enthusiasts With a proven track record in helping
     blockchain and Defi projects grow through <br> strategic engagement, fast-paced support, and authentic conversations. <br>
     With 5-10 hours of dedicated daily availability and deep involvement in the Web 3 ecosytem, <br> especially across
     Africa's emerging crypto space,<br> i specialize in scaling communities, boosting user retention, and driving real-time <br> 
@@ -222,7 +222,7 @@ About
 <img src="x_logo_PNG19.png" height="70"> </a>
 
 <a href="https://t.me/IZRAE_L"> 
-<img src="images/2048px-Telegram_logo.svg.png" height="70"> </a>
+<img src="2048px-Telegram_logo.svg.png" height="70"> </a>
 
 </div>
 
