--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ margin-bottom: 20px;
 <body>
     
 <section class="hero">
-<img src="images/Profile.jpg" alt="Profile Picture">
+<img src="Profile.jpg" alt="Profile Picture">
 
 <h1>
     Izzy
