--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ margin-bottom: 20px;
     Izzy
 </h1>
 
-<p> A crypto Enthusiasts  highly active Comunity Manager, Chat Moderaator, and a Web2 Chatter  </p>
+<p> A crypto Enthusiasts  highly active Comunity Manager, Chat Moderator, and a Web2 Chatter  </p>
 
 
 </section>
